# central-workflows

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  readme.md
.github/: dependabot.yml
.github/actions/psr-summary/: action.yml
.github/actions/secret-present/: action.yml
.github/workflows/: cd.yml  ci.yml  demo-cd.yml  demo-ci.yml  python-test.yml  quarto-render.yml  release.yml  self-cd.yml  self-ci.yml  update-main.yml
.github/workflows/reusable/cd/: cd.yml
.github/workflows/reusable/ci/: ci.yml
.github/workflows/scripts/: quarto-render.sh  setup-venv.sh  static-site-git.sh
cd/scripts/: static-site-git.sh
ci/: ci.yml
python/pytest/: python-test.yml
quarto/: quarto-render.yml
scripts/git/: addon-gitconfig  log-worktree.sh
scripts/logger/: bash-logger.sh
scripts/quarto/: quarto-render.sh
