[project]
name = "central-workflows"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = []


[dependency-groups]
dev = [
    "pre-commit",
    "pytest>=8.4.2",
    "python-semantic-release>=10.4.0",

]

# Version control
#------------------------------------------------------------------------


[tool.semantic_release]
version_toml = [
  "pyproject.toml:project.version",
]
assets = []
# build_command_env = ['GH_TOKEN']
# build_command = ''
commit_message = "ci(semantic-release): automatic update - v{version}"
commit_parser = "conventional"

logging_use_named_masks = false
allow_zero_version = true
major_on_zero = true
no_git_verify = false

tag_format = "v{version}"
upload_to_release = true

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "Pranav Kumar Mishra <62562712+pranavmishra90@users.noreply.github.com>"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat", "docs"]
patch_tags = ["fix", "perf"]


[tool.semantic_release.branches.release]
match = "release|release*"
prerelease = false

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches.develop]
match = "develop|dev"
prerelease = true
prerelease_token = "beta"

[tool.semantic_release.branches.featfix]
match = "feat/*|fix/*"

[tool.semantic_release.branches.docs]
match = "docs/*"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = true
insecure = false
